# ocv

./: .gitignore  CMakeLists.txt  Calibrate.cpp  Calibrate.hpp  README  VideoProcess.cpp  VideoProcess.hpp  camera.cpp  camera.hpp  cli.cpp  cli.hpp  main.cpp  ocv.hpp  ocvstd.hpp  utils.cpp  utils.hpp
FrameProcess/: CannyFPNode.cpp  CannyFPNode.hpp  CascadeDetectorFPN.cpp  CascadeDetectorFPN.hpp  CcalibFPN.cpp  CcalibFPN.hpp  FeatureDetectorFPN.cpp  FeatureDetectorFPN.hpp  FeatureFactory.cpp  FeatureFactory.hpp  FindContour.cpp  FindContour.hpp  FrameProcessNode.cpp  FrameProcessNode.hpp  FrameProcessNodeFactory.cpp  FrameProcessNodeFactory.hpp  HoughCirclesFPN.cpp  HoughCirclesFPN.hpp  HoughFPNode.cpp  HoughFPNode.hpp  HoughLineFPNode.cpp  HoughLineFPNode.hpp  LsdSlamFPN.cpp  LsdSlamFPN.hpp  ObjectDetectorFPN.cpp  ObjectDetectorFPN.hpp  OpticalFlowFPN.cpp  OpticalFlowFPN.hpp
data/: calibrate-camera.xml  camera_cal.xml  contour.xml  face-detect.xml  feature-detect.xml  hough-circles.xml  hough-lines.xml  hough.xml  object-detect.xml  optical-flow.xml
data/xml/: camera_cfg.xml  contour.xml  face-detect.xml  lsd-slam.xml  optical-flow.xml
ocv.xcodeproj/: project.pbxproj
ocv.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ocv.xcodeproj/project.xcworkspace/xcshareddata/: ocv.xccheckout
ocv.xcodeproj/project.xcworkspace/xcuserdata/guyb.xcuserdatad/: UserInterfaceState.xcuserstate
ocv.xcodeproj/project.xcworkspace/xcuserdata/henryminden.xcuserdatad/: UserInterfaceState.xcuserstate
ocv.xcodeproj/xcuserdata/guyb.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ocv.xcodeproj/xcuserdata/guyb.xcuserdatad/xcschemes/: lsd_slam_core.xcscheme  lsdslam.xcscheme  ocv.xcscheme  xcschememanagement.plist
ocv.xcodeproj/xcuserdata/henryminden.xcuserdatad/xcschemes/: ocv.xcscheme  xcschememanagement.plist
ref-only/: camera_clibration.cpp  graphcut.cpp  ocv_knnmatch.cpp
ref-only/Find-Object-0.4.1-Source/FindObject.xcodeproj/: project.pbxproj
ref-only/Find-Object-0.4.1-Source/FindObject.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ref-only/Find-Object-0.4.1-Source/FindObject.xcodeproj/project.xcworkspace/xcshareddata/: FindObject.xccheckout
ref-only/Find-Object-0.4.1-Source/FindObject.xcodeproj/project.xcworkspace/xcuserdata/guyb.xcuserdatad/: UserInterfaceState.xcuserstate
ref-only/Find-Object-0.4.1-Source/example/: main.cpp
ref-only/Find-Object-0.4.1-Source/src/: AboutDialog.cpp  AddObjectDialog.cpp  MainWindow.cpp  Settings.cpp
ref-only/Find-Object-0.4.1-Source/src/utilite/: UDirectory.cpp
slam/lsdslam/: SlamSystem.cpp  SlamSystem.h
slam/lsdslam/DataStructures/: Frame.h  FrameMemory.h  FramePoseStruct.cpp
slam/lsdslam/DepthEstimation/: DepthMap.cpp
slam/lsdslam/GlobalMapping/: KeyFrameGraph.h
slam/lsdslam/IOWrapper/: ImageDisplay.h  Timestamp.h
slam/lsdslam/sophus/: rxso3.hpp  se2.hpp  se3.hpp  sim3.hpp  so2.hpp  so3.hpp  sophus.hpp
slam/lsdslam/util/: SophusUtil.cpp  globalFuncs.cpp  settings.h
slam/orbslam/.svn/: wc.db
slam/orbslam/info/: info.xml
slam/slamptam/ptam/: CMakeLists.txt  Makefile
slam/slamptam/ptam/src/: ATANCamera.cc  CalibCornerPatch.cc  CameraCalibrator.cc  MapMaker.cc  Params.cpp  System.cc
